--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -7,7 +7,7 @@
         <form class="email-subscription" action="https://herokuapp.us19.list-manage.com/subscribe/post?u=330f06dfd09cd475763c2b9fe&amp;id=433a32c42d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
          <div class="form-group">
           <label class= "email-font" for="InputEmail1">Email address</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Sign up with your email" name="EMAIL" id="mce-EMAIL">
+          <input type="email" class="form-control fcfooter" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Sign up with your email" name="EMAIL" id="mce-EMAIL">
         </div>
       </form>
       <h2>waste'd</h2>
