--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,70 +1,70 @@
 <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h3 class="modal-title" id="myModalLabel"><%= @item.name %></h3>
-        <h6><%= @item.user.name %></h6>
-        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= @item.picture %>); margin-top: 10px;"></div>
+  <div class="modal-content">
+    <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      <h3 class="modal-title" id="myModalLabel"><%= @item.name %></h3>
+      <h6><%= @item.user.name %></h6>
+      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= @item.picture %>); margin-top: 10px;"></div>
 
-        <div class="row overview" style="margin-top: 10px;">
-          <div class="col-md-3 col-md-offset-1">
-            <p style="font-size: 14px !important;">Availability: <strong><%= @item.quantity %></strong></p></div>
-            <div class="col-md-1">
-            <p><i class="fas fa-circle line-breaker"></i></p>
-            </div>
-            <div class="col-md-3">
-              <p style="font-size: 14px !important;"><strong><%= @item.category %></strong></p>
-            </div>
-            <div class="col-md-1">
-            <p><i class="fas fa-circle line-breaker"></i></p>
-            </div>
-            <div class="col-md-3">
-              <p style="font-size: 14px !important;"><strong><%= @item.food_type %></strong></p>
-            </div>
+      <div class="row overview" style="margin-top: 10px;">
+        <div class="col-md-3 col-md-offset-1">
+          <p style="font-size: 14px !important;">Availability: <strong><%= @item.quantity %></strong></p></div>
+          <div class="col-md-1">
+          <p><i class="fas fa-circle line-breaker"></i></p>
           </div>
-          <br>
-          <p style="margin-top: -5px; font-size: 14px !important;">Address: <strong><%= @item.address %></strong></p>
-          <p style="font-size: 14px !important;">Expiration: <strong><%= @item.expiration.strftime("%a, %b %e %Y - %I:%M%p") %></strong></p>
-          <p style="margin-top: -5px; font-size: 14px !important;">Description: <strong><%= @item.description %></strong></p>
-          <div class="editlinks">
-            <!-- Edit and Delete if you own this @item -->
-            <% if policy(@item).edit? %>
-            <%= link_to "Edit |", edit_item_path(@item) %>
-            <% end %>
-            <% if policy(@item).destroy? %>
-            <%= link_to "Delete", item_path(@item),
-            method: :delete,
-            data: { confirm: "Are you sure?" } %>
-            <% end %>
+          <div class="col-md-3">
+            <p style="font-size: 14px !important;"><strong><%= @item.category %></strong></p>
+          </div>
+          <div class="col-md-1">
+          <p><i class="fas fa-circle line-breaker"></i></p>
+          </div>
+          <div class="col-md-3">
+            <p style="font-size: 14px !important;"><strong><%= @item.food_type %></strong></p>
           </div>
         </div>
-        <div class="modal-body" style="padding-bottom: 20px;">
-          <div class="row">
-            <div class="col-sm-offset-1 col-sm-4 col-md-offset-1 col-md-4">
-              <div class=" form-modal">
-                <label>Quantity: </label>
-                <div class="input-group">
-                  <div class="input-group-btn">
-                    <button id="down" class="btn btn-default circles" onclick=" down('0')"><span class="glyphicon glyphicon-minus"></span></button>
-                  </div>
-                  <input type="text" id="myNumber" class="form-control input-number circle" value="1" />
-                  <div class="input-group-btn">
-                    <button id="up" class="btn btn-default circles" onclick="up(<%= @item.quantity %>)"><span class="glyphicon glyphicon-plus"></span></button>
-                  </div>
+        <br>
+        <p style="margin-top: -5px; font-size: 14px !important;">Address: <strong><%= @item.address %></strong></p>
+        <p style="font-size: 14px !important;">Expiration: <strong><%= @item.expiration.strftime("%a, %b %e %Y - %I:%M%p") %></strong></p>
+        <p style="margin-top: -5px; font-size: 14px !important;">Description: <strong><%= @item.description %></strong></p>
+        <div class="editlinks">
+          <!-- Edit and Delete if you own this @item -->
+          <% if policy(@item).edit? %>
+          <%= link_to "Edit |", edit_item_path(@item) %>
+          <% end %>
+          <% if policy(@item).destroy? %>
+          <%= link_to "Delete", item_path(@item),
+          method: :delete,
+          data: { confirm: "Are you sure?" } %>
+          <% end %>
+        </div>
+      </div>
+      <div class="modal-body" style="padding-bottom: 20px;">
+        <div class="row">
+          <div class="col-sm-offset-1 col-sm-4 col-md-offset-1 col-md-4">
+            <div class=" form-modal">
+              <label>Quantity: </label>
+              <div class="input-group">
+                <div class="input-group-btn">
+                  <button id="down" class="btn btn-default circles" onclick="down('0')"><span class="glyphicon glyphicon-minus"></span></button>
+                </div>
+                <input type="text" id="<%= @item.id %>" class="form-control input-number circle" value="1" />
+                <div class="input-group-btn">
+                  <button id="up" class="btn btn-default circles" onclick="up(<%= @item.quantity %>)"><span class="glyphicon glyphicon-plus"></span></button>
                 </div>
               </div>
             </div>
+          </div>
 
-            <div class="col-sm-offset-1 col-sm-4 col-md-offset-1 col-md-4 cart-btn">
-              <button type="button" class="btn btn-dark btn-lg">ADD TO CART</button>
-            </div>
-            <div class="col-sm-offset-1 col-sm-4 col-md-offset-1 col-md-4 cart-btn1">
-              <button type="button" class="btn btn-dark ">One-Click Shop</button>
-            </div>
+          <div class="col-sm-offset-1 col-sm-4 col-md-offset-1 col-md-4 cart-btn">
+            <button type="button" class="btn btn-dark btn-lg">ADD TO CART</button>
+          </div>
+          <div class="col-sm-offset-1 col-sm-4 col-md-offset-1 col-md-4 cart-btn1">
+            <button type="button" class="btn btn-dark ">One-Click Shop</button>
           </div>
         </div>
       </div>
     </div>
+  </div>
 
 
 <div class="container">
