--- a/app/views/shared/_card_modal.html.erb
+++ b/app/views/shared/_card_modal.html.erb
@@ -2,177 +2,107 @@
 <div class="modal fade" id="myModal-<%= item.id %>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
+
+      <!-- MODAL HEADER -->
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
         <h3 class="modal-title" id="myModalLabel"><%= item.name %></h3>
         <h6><%= item.user.name %></h6>
         <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= item.picture %>); margin-top: 10px;"></div>
 
         <div class="row overview" style="margin-top: 10px;">
           <div class="col-md-3 col-md-offset-1">
-            <p style="font-size: 14px !important;">Availability: <strong><%= item.quantity %></strong></p></div>
-            <div class="col-md-1">
-              <p><i class="fas fa-circle line-breaker"></i></p>
-            </div>
-            <div class="col-md-2">
-              <p style="font-size: 14px !important;"><strong><%= item.category %></strong></p>
-            </div>
-            <div class="col-md-1">
-              <p><i class="fas fa-circle line-breaker"></i></p>
-            </div>
-            <div class="col-md-3">
-              <p style="font-size: 14px !important;">
-                <strong>
-                  <% item.types.each do |type| %>
-                  <%= type.name %> |
-                  <% end %>
-                </strong>
-              </p>
-            </div>
+            <p style="font-size: 14px !important;">Availability: <strong><%= item.quantity %></strong></p>
           </div>
-          <br>
-          <p style="margin-top: -5px; font-size: 14px !important;">Address: <strong><%= item.address %></strong></p>
-          <p style="font-size: 14px !important;">Expiration: <strong><%= item.expiration.strftime("%a, %b %e %Y - %I:%M%p") %></strong></p>
-          <p style="margin-top: -5px; font-size: 14px !important;">Description: <strong><%= item.description %></strong></p>
-          <div class="editlinks">
-            <!-- Edit and Delete if you own this item -->
-            <% if policy(item).edit? %>
-              <%= link_to "Edit |", edit_item_path(item) %>
-            <% end %>
-            <% if policy(item).destroy? %>
-              <%= link_to "Delete", item_path(item),
-              method: :delete,
-              data: { confirm: "Are you sure?" } %>
-            <% end %>
+          <div class="col-md-1">
+            <p><i class="fas fa-circle line-breaker"></i></p>
+          </div>
+          <div class="col-md-2">
+            <p style="font-size: 14px !important;"><strong><%= item.category %></strong></p>
+          </div>
+          <div class="col-md-1">
+            <p><i class="fas fa-circle line-breaker"></i></p>
+          </div>
+          <div class="col-md-3">
+            <p style="font-size: 14px !important;">
+              <strong>
+                <% item.types.each do |type| %>
+                <%= type.name %> |
+                <% end %>
+              </strong>
+            </p>
           </div>
         </div>
-        <div class="modal-body" style="padding-bottom: 20px;">
-          <div class="row">
-            <div class="col-sm-offset-1 col-sm-4 col-md-offset-1 col-md-4">
-              <div class=" form-modal">
+        <br>
+        <p style="margin-top: -5px; font-size: 14px !important;">Address: <strong><%= item.address %></strong></p>
+        <p style="font-size: 14px !important;">Expiration: <strong><%= item.expiration.strftime("%a, %b %e %Y - %I:%M%p") %></strong></p>
+        <p style="margin-top: -5px; font-size: 14px !important;">Description: <strong><%= item.description %></strong></p>
+        <div class="editlinks">
+          <!-- Edit and Delete if you own this item -->
+          <% if policy(item).edit? %>
+            <%= link_to "Edit |", edit_item_path(item) %>
+          <% end %>
+          <% if policy(item).destroy? %>
+            <%= link_to "Delete", item_path(item),
+            method: :delete,
+            data: { confirm: "Are you sure?" } %>
+          <% end %>
+        </div>
+      </div>
+      <!-- END MODAL HEADER -->
+
+      <!-- MODAL BODY -->
+      <div class="modal-body" style="padding-bottom: 20px;">
+        <div class="row">
+          <div class="col-sm-offset-1 col-sm-4 col-md-offset-1 col-md-4">
+
+                <!-- FORM WITH UP AND DOWN BUTTONS -->
+            <div id="<%= item.id %>" class="controls">
+              <span data-item-quantity="<%= item.quantity %>" class="quantity"></span>
+
+              <div class="form-modal">
                 <label>Quantity: </label>
-
-
-
-
-                <!-- Set item's cart status based on current user -->
-                <!-- Set item's cart @status based on current user -->
-                 <%  if user_signed_in? %>
-                 <%  @status = 'available' %>
-                 <%     # Mark item as in cart %>
-                 <%     @reservations.each do |reservation| %>
-                 <%       if reservation.item_id == item.id && reservation.user_id == current_user.id %>
-                 <%         @status = 'reserved' %>
-                 <%         @reservation = reservation %>
-                 <%         break %>
-                 <%       end %>
-                 <%     end %>
-
-
-                 <% if @status == 'available' %>
-                 <%   @reservation.item = item %>
-                 <% end %>
-
-
-
-                <!-- QUANTITY AND PLUS/MINUS BUTTONS -->
-                <div class="quantity">
-
-                  <!-- MINUS BUTTON -->
-                  <% if item.quantity > 1 %>
-                    <%= simple_form_for @reservation do |f| %>
-                      <%= f.error_notification %>
-                      <%= f.hidden_field :in_cart, value: true %>
-                      <%= f.hidden_field :quantity, value: @reservation.quantity - 1 %>
-                         <%= f.button :button, class: 'glyphicon glyphicon-minus' do %>
-                        <%= onclick="down('0')" %>
-                      <% end %>
-                    <% end %>
-                  <% elsif @reservation.quantity == 1 %>
-                    <%= simple_form_for @reservation, url: @reservation, method: :delete do |f| %>
-                      <%= f.error_notification %>
-                      <%= f.hidden_field :in_cart, value: true %>
-                      <%= f.button :button, class: 'plus-minus' do %>
-                        <%= icon('fas', 'minus') %>
-                      <% end %>
-                    <% end %>
-                  <% end %>
-                  <!-- END MINUS BUTTON -->
-
-
-
-
-
-
-
-
-
-
-
-
-                  <div class="input-group">
-                    <div class="input-group-btn">
-                      <button id="down" class="btn btn-default circles" onclick="down('0')">
-                        <span class="glyphicon glyphicon-minus"></span>
-                      </button>
-                    </div>
-
-                    <input type="text" id="myNumber" class="form-control input-number circle" value="1" />
-
-                    <div class="input-group-btn">
-                      <button id="up" class="btn btn-default circles" onclick="up(<%= item.quantity %>)">
-                        <span class="glyphicon glyphicon-plus"></span>
-                      </button>
-                    </div>
+                <div class="input-group">
+                  <div class="input-group-btn">
+                    <button class="btn btn-default circles down">
+                      <span class="glyphicon glyphicon-minus"></span>
+                    </button>
                   </div>
 
+                  <!-- QUANTITY RESERVED -->
+                  <%= form_with model: @reservation, url: create_reservation_path, id: "add-to-cart-#{item.id}", local: true do |f| %>
+                    <%
+                      value = ""
+                      if item.reservations.where(user_id: current_user.id).any?
+                        value = item.reservations.find(user_id: current_user.id).quantity
+                      else
+                        value = 0
+                      end
+                     %>
+                    <%= f.text_field :quantity, value: value, class: "form-control input-number circle"  %>
+                    <%= f.hidden_field :item_id, value: item.id %>
 
-
-
-
-
-
-
-                  <%= @reservation.quantity %>
-
-                  <!-- PLUS BUTTON -->
-                  <% if @reservation.quantity < @reservation.item.quantity %>
-                    <%= simple_form_for @reservation do |f| %>
-                      <%= f.error_notification %>
-                      <%= f.hidden_field :in_cart, value: true %>
-                      <%= f.hidden_field :item_id, value: item.id %>
-                      <%= f.hidden_field :user_id, value: current_user.id %>
-                      <%= f.hidden_field :quantity, value: @reservation.quantity + 1 %>
-                         <%= f.button :button, class: 'plus-minus' do %>
-                        <%= icon('fas', 'plus') %>
-                      <% end %>
-                    <% end %>
-                  <% else %>
-                    <%= simple_form_for @reservation do |f| %>
-                      <%= f.error_notification %>
-                         <%= f.button :button, disabled: true, class: 'plus-minus' do %>
-                        <%= icon('fas', 'plus') %>
-                      <% end %>
-                    <% end %>
                   <% end %>
-                  <!-- END PLUS BUTTON -->
+                  <!-- END QUANTITY RESERVED -->
 
+                  <div class="input-group-btn">
+                    <button class="btn btn-default circles up">
+                      <span class="glyphicon glyphicon-plus"></span>
+                    </button>
+                  </div>
                 </div>
-                <!-- END QUANTITY AND PLUS/MINUS BUTTONS -->
-
-
-
-
-                 <%   end %>
-
-
-
-
-
               </div>
             </div>
+                <!-- END FORM WITH UP AND DOWN BUTTONS -->
+            </div>
+
             <div class="col-sm-offset-1 col-sm-4 col-md-offset-1 col-md-4 cart-btn">
-              <button type="button" class="btn btn-dark btn-lg">ADD TO CART</button>
+            <button type="submit" class="btn btn-dark btn-lg" form="add-to-cart-<%=item.id%>">
+              <span class="glyphicon glyphicon-plus"></span>
+              <span class="btn btn-dark btn-lg">Add to Cart</span>
+            </button>
             </div>
             <div class="col-sm-offset-1 col-sm-4 col-md-offset-1 col-md-4 cart-btn1">
               <button type="button" class="btn btn-dark ">One-Click Shop</button>
@@ -180,6 +110,8 @@
           </div>
         </div>
       </div>
+      <!-- END MODAL BODY -->
+
     </div>
   </div>
 </div>
