--- a/app/views/shared/_card_modal.html.erb
+++ b/app/views/shared/_card_modal.html.erb
@@ -24,7 +24,11 @@
               <p style="font-size: 14px !important;">
                 <strong>
                   <% item.types.each do |type| %>
-                  <%= type.name %> |
+                  <% if item.types.last == type %>
+                 <%= type.name %>
+                 <% else %>
+                <%= type.name %> |
+                 <% end %>
                   <% end %>
                 </strong>
               </p>
@@ -182,4 +186,3 @@
       </div>
     </div>
   </div>
-</div>
