--- a/app/assets/stylesheets/components/_home.scss
+++ b/app/assets/stylesheets/components/_home.scss
@@ -26,7 +26,12 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  margin: 1em 0 1em 0
+  flex-direction: column !important;
+  margin: 1em 0 1em 0;
+  h3{
+    font-size: 20px;
+    margin-top: 24px;
+  }
 }
 
 .carousel-pictures{
@@ -42,6 +47,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-direction: column !important;
   }
 
   .caps1{
