--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -19,7 +19,7 @@
             <div class="item <%= 'active' if index == 0 %>">
               <div class="carousel-col">
                 <div class="img-responsive">
-                  <%= render 'shared/card', item: item %>
+                  <%= render 'shared/card', item: item, in_cart: true %>
                 </div>
               </div>
             </div>
