--- a/app/assets/stylesheets/components/_home.scss
+++ b/app/assets/stylesheets/components/_home.scss
@@ -5,6 +5,7 @@
   align-items: center;
   text-align:center;
   padding: 0px 10px;
+      text-align: left;
 }
 
 .cfhome{
@@ -46,6 +47,7 @@
 
   .caps1{
     margin-bottom: 30px;
+        text-align: left;
   }
 
 }
