--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="banner"></div>
 <div class="container-fluid cfhome ">
   <div class="container home-one">
-    <div id="why-us">
+    <div class="why-us">
       <div class="row">
         <div class="col-md-6">
           <div class="cat-parent">
@@ -14,7 +14,7 @@
         </div>
       </div>
       <div class="col-md-6">
-        <p>Eat for a fair price and save unsold food from being wasted. Over 1/3 of all food produced globally goes to waste. The annual value of food wasted globally is $1 trillion, and it weighs 1.3 billion tonnes. Restaurants and cafes throw away food that they can't sell anymore everyday. Food is wasted and money is lost. Let's change that.</p>
+        <p>Over 1/3 of all food produced globally goes to waste. The annual value of food wasted globally is $1 trillion, and it weighs 1.3 billion tonnes. Restaurants and cafes throw away food that they can't sell anymore everyday. Food is wasted and money is lost. Let's change that.</p>
       </div>
     </div>
   </div>
@@ -25,38 +25,37 @@
 
 
 
-  <div id="become-supplier"></div>
   <div class="row">
     <div class="col-sm-12 col-md-4 caps">
       <div class="whatever">
         <div class="image"><%= image_tag "revenue.svg" %></div>
-        INCREASE REVENUE
+        <h3>INCREASE REVENUE</h3>
       </div>
 
     </div>
     <div class="col-sm-12 col-md-4 caps">
       <div class="whatever">
         <div class="image"><%= image_tag "piggy-bank.svg" %></div>
-        REDUCE COSTS
+        <h3>REDUCE COSTS</h3>
       </div>
     </div>
     <div class="col-sm-12 col-md-4 caps">
       <div class="whatever">
         <div class="image"><%= image_tag "success.svg" %></div>
-        IMPROVE BRAND IMAGE
+        <h3>IMPROVE BRAND IMAGE</h3>
       </div>
     </div>
   </div>
+
   <div class="row" style="margin-top: 50px;">
+  <div id="become-supplier"></div>
 
 
-
-    <div id="become-user"></div>
     <div class="col-md-6">
-      <h2 class="caps caps1">This is how you can connect.</h2>
+      <h2 class="caps caps1" style="text-align: left;">This is how you can connect.</h2>
     </div>
     <div class="col-md-6">
-      <ol>
+      <ol style="padding: 24px;">
         <li>Suscribe to our system.</li>
         <li>Upload a restaurant.</li>
         <li>Take a picture of the food that you don't want yo throw away and set time.</li>
@@ -71,6 +70,7 @@
 <div class="container-fluid cfhome">
   <div class="container carousel-pictures">
     <div class="row">
+                    <div id="become-user"></div>
 
       <div class="col-xs-10 col-md-10 col-centered">
         <h1 style="text-transform: uppercase; font-weight: bold;">Get inspired</h1>
@@ -117,30 +117,30 @@
     <div class="col-sm-12 col-md-4 caps">
       <div class="whatever">
         <div class="image"><%= image_tag "savemoney.svg" %></div>
-        SAVE MONEY
+        <h3>SAVE MONEY</h3>
       </div>
 
     </div>
     <div class="col-sm-12 col-md-4 caps">
       <div class="whatever">
         <div class="image"><%= image_tag "recycle-sign.svg" %></div>
-        REDUCE FOOD WASTE
+        <h3>REDUCE FOOD WASTE</h3>
       </div>
     </div>
     <div class="col-sm-12 col-md-4 caps">
       <div class="whatever">
         <div class="image"><%= image_tag "silverware.svg" %></div>
-        EAT CONSCIOUSLY
+        <h3>EAT CONSCIOUSLY</h3>
       </div>
     </div>
   </div>
 
   <div class="row" style="margin-top: 50px;">
     <div class="col-md-6">
-      <h2 class="caps caps1">This is how waste'd works.</h2>
+      <h2 class="caps caps1" style="text-align: left;">This is how waste'd works.</h2>
     </div>
     <div class="col-md-6">
-      <ol>
+      <ol style="padding: 24px;">
         <li>Download the app and browse unsold food from restaurants, cafes and grocery stores.</li>
         <li>Select & purchase food for ½ price - all within the app.</li>
         <li>Pick it up & enjoy!.</li>
