map and filters

--- a/app/views/shared/_card.html.erb
+++ b/app/views/shared/_card.html.erb
@@ -20,7 +20,7 @@
       </div>
     </div>
     <div class="item-description">
-      <h6><%= item.user.username.capitalize %></h6>
+      <h6><%= item.user.name.capitalize %></h6>
       <h6>$ <%= item.price %> </h6>
       <p><%= item.pickup_time.strftime("pickup before %I:%M%p |") %></p>
       <p><%= item.distance_location %>km</p>
