--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,34 +1,38 @@
+<% if params[:term].present? %>
+  <% item = Item.find(params[:term]) %>
+<% end %>
+
 <%= simple_form_for item do |f| %>
 <%= f.error_notification %>
 
 <div class="container" id="formnew">
    <div class="col-md-8 col-md-offset-2">
-  <div class="row"><%= f.input :name, input_html: { class: "input-bar"} %></div>
-  <div class="row"><%= f.input :description, input_html: { class: "input-bar"} %></div>
-  <div class="row"><%= f.input :address, input_html: { class: "input-bar"} %></div>
-  <div class="row"><%= f.input :category, input_html: { class: "input-bar"}, collection: Item::CATEGORY, multiple: true %></div>
+  <div class="row"><%= f.input :name, input_html: {value: item.name, class: "input-bar"} %></div>
+  <div class="row"><%= f.input :description, input_html: {value: item.description, class: "input-bar"} %></div>
+  <div class="row"><%= f.input :address, input_html: {value: item.address, class: "input-bar"} %></div>
+  <div class="row"><%= f.input :category, input_html: {value: item.category, class: "input-bar"}, collection: Item::CATEGORY, multiple: true %></div>
   <div class="row row2">
     <%= f.input :types do %>
-    <%= f.select :types, Type::TYPES, {}, {class: "select2", multiple: true} %>
+    <%= f.select :types, Type::TYPES, {}, {value: item.types, class: "select2", multiple: true} %>
     <% end %>
   </div>
 
 
   <div class="row">
     <div class="col-md-6">
-      <div><%= f.input :price, input_html: { class: "input-bar"} %></div>
+      <div><%= f.input :price, input_html: {value: item.price,  class: "input-bar"} %></div>
     </div>
     <div class="col-md-6">
-      <div><%= f.input :quantity, input_html: { class: "input-bar"} %></div>
+      <div><%= f.input :quantity, input_html: {value: item.quantity,  class: "input-bar"} %></div>
     </div>
   </div>
 
 <div class="row">
   <div class="col-md-6">
-  <div><%= f.input :pickup_time, as: :string, input_html: { id: "start_date"} %></div>
+  <div><%= f.input :pickup_time, as: :string, input_html: {value: item.pickup_time,  id: "start_date"} %></div>
 </div>
   <div class="col-md-6">
-  <div><%= f.input :expiration, as: :string, input_html: { id: "end_date"} %></div>
+  <div><%= f.input :expiration, as: :string, input_html: {value: item.expiration,  id: "end_date"} %></div>
 </div>
 
 </div>
