--- a/app/assets/stylesheets/users/show.scss
+++ b/app/assets/stylesheets/users/show.scss
@@ -131,16 +131,52 @@
 
 .item-holder {
   display: flex;
+  color:black;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
   padding: 20px;
   // background-color: #CCC;
-  color: green;
   border-radius: 10px;
   font-family: "Montserrat", sans-serif;
   p, h2, h3 {
     margin: 0;
+  }
+}
+
+.item-description {
+  display: flex;
+  justify-content: space-between;
+  p{
+    margin: 13px;
+    color:black;
+    margin-right: 0px;
+    a{
+      color:black;
+    }
+  }
+  h6{
+    margin: 5px;
+    margin-left: 0px;
+  }
+}
+
+.card-description{
+  h2{
+        margin-bottom: 0;
+        font-size: 18px;
+
+  }
+}
+
+.pending-items{
+      padding-left: 0px;
+    padding-right: 36px;
+}
+
+.as-user-role{
+  h3{
+    color:gray;
   }
 }
