--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -3,6 +3,8 @@
   align-items: center;
   justify-content: center;
   background: $blue;
+  padding: 19px 5px;
+  border-bottom: 1px solid black;
 }
 
 .btn-filter {
