--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="min-height: 500px;">
   <div class="row">
     <div class="col-xs-12 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
       <div class="checkout">
