--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,7 +1,8 @@
-<div class="container" style="text-align: center;">
-<div class="row" >
- <h3>Upload your item</h3>
+<div class="container " style="margin-top: 30px; margin-bottom: 30px;">
+  <div class="row">
+    <div class="col-xs-6 col-xs-offset-3" style="box-shadow: 1px 1px 3px #eaeaea;">
+     <h3 style="margin-bottom: 30px;" class="text-center">Upload your item</h3>
+     <%= render 'form', item: @item, feature: @feature %>
+   </div>
  </div>
- </div>
-
-<%= render 'form', item: @item, feature: @feature %>
+</div>
